# google-cloud-transmitting-hl7v2-messages-over-tcp-ip-connections-demo

./: .gitignore  README.md
api/: .env.template  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api/api/: __init__.py  config.py
docs/deployment/: README.md
infra/deployment/cloudbuild/deploy/: cloudbuild.yaml
infra/deployment/terraform/bootstrap/: .terraform.lock.hcl  backend.tf  gcs.tf  main.tf  outputs.tf  secret_manager.tf  variables.tf
infra/deployment/terraform/bootstrap/modules/cloudbuild/: cloudbuild.tf  variables.tf
infra/deployment/terraform/bootstrap/modules/enable_apis/: main.tf
infra/deployment/terraform/bootstrap/modules/iam/: cloudbuild_sa.tf
infra/deployment/terraform/deploy/: main.tf  variables.tf
infra/deployment/terraform/deploy/modules/api/: artifact_registry.tf  cloud_run.tf  iam.tf  variables.tf  versions.tf
infra/deployment/terraform/deploy/modules/healthcare/: healthcare.tf  main.tf  outputs.tf  pubsub.tf
infra/deployment/terraform/deploy/modules/iam/: healthcare_sa.tf
infra/deployment/terraform/deploy/modules/mllp_adapter/: healthcare.tf  iam.tf  mllp_adapter.tf  my_vpn.tf  variables.tf  vm.tf
infra/deployment/terraform/deploy/modules/my_vpn/: my_vpn.tf  variables.tf
infra/deployment/terraform/deploy/modules/network/: firewall.tf  main.tf  outputs.tf  variables.tf  versions.tf  vpn.tf
infra/deployment/terraform/deploy/modules/network/modules/vpc/: firewall.tf  main.tf  outputs.tf  (+1 more)
infra/deployment/terraform/enable_apis/: backend.tf  main.tf
simhospital/: .env.template  README.md  docker-compose.yaml
